fix alignment

--- a/style.css
+++ b/style.css
@@ -1,183 +1,176 @@
 body {
-    box-sizing: border-box;
-    margin: 0px;
-    padding: 50px;
+  box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
+}
+
+main {
+  padding: 50px;
 }
 header {
-    display: flex;
-    width: 100%;
-    position: fixed;
-    left: 0px;
-    right: 0px;
-    top: 0px;
-    background-color: rgb(254, 254, 255);
+  display: flex;
+  width: 100%;
+  
+  background-color: rgb(254, 254, 255);
 }
+
 header ul {
-    list-style: none;
-    display: inline-flex;
-    width: inherit;
-    justify-content: space-around;
-    font-size: 24px;
-    left: 0px;
-    right: 0px;
+  list-style: none;
+  display: inline-flex;
+  width: inherit;
+  justify-content: space-around;
+  font-size: 24px;  
 }
-header  #center {
-    font-size: 24px;
-    font-weight: bolder;
-    font-family: Lobster;
-    position: relative;
-    right: 170px;
 
+header#center {
+  font-size: 24px;
+  font-weight: bolder;
+  font-family: "Lobster";
+  position: relative;
+  right: 170px;
 }
+
 header #bold {
-    font-weight: bold;
-    text-align: left;
-    font-family: Arial, sans-serif;
-    position: relative;
-    right:280px;
-    bottom: 0px;
-    display: inline;
+  font-weight: bold;
+  text-align: left;
+  font-family: Arial, sans-serif;
+  position: relative;
+  right: 280px;
+  display: inline;
 }
-header #sub-button {
-    position: relative;
-    left:120px;
-    bottom: 0px;
-    display: inline;
-}
-header #login-button {
-    position: relative;
-    left:30px;
-    bottom: 0px;
-    display: inline;
-}
-header ul .nav-icon {
-    position: relative;
-    bottom: 0px;
-    right: 80px;
-    height: 20px;
-    width: 20px;
-}
-header ul .search-icon {
-    position: relative;
-    right:180px;
-    bottom: 0px;
-    height: 30px;
-    width: 30px;
-}
-button {
-    color: white;
-    background-color: rgb(7, 53, 114);
-    outline: none;
-    border: none;
-    border-radius: 5px;
-    padding: 8px;
-    font-weight: bold;
-}
-header div {
-    display: flex;
-    
-}
-.footer {
-    /* position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: red;
-    color: white;
-    text-align: center; */
-}
-.author {
 
+header #sub-button {
+  position: relative;
+  left: 120px;
+  display: inline;
 }
+
+header #login-button {
+  position: relative;
+  left: 30px;
+  display: inline;
+}
+
+header ul .nav-icon {
+  position: relative;
+  right: 80px;
+  height: 20px;
+  width: 20px;
+}
+
+header ul .search-icon {
+  position: relative;
+  right: 180px;
+  height: 30px;
+  width: 30px;
+}
+
+button {
+  color: white;
+  background-color: rgb(7, 53, 114);
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  padding: 8px;
+  font-weight: bold;
+}
+
+header div {
+  display: flex;  
+}
+
 .center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 70%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 70%;
 } 
 
 .inflation-container {
-    width: auto;
-    display: flex;
-    /* border: 1px solid black; */
-    height: 100vh;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin-bottom: 8rem;
+  width: auto;
+  display: flex;
+  height: 100vh;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-bottom: 8rem;
 }
+
 .inflation-item {
-    flex-basis: 280px;
-    /* border: 1px solid black; */
-    margin-bottom: 10px;
-    display: flex;
-    flex-direction: column;
+  flex-basis: 280px;
+  margin-bottom: 10px;
+  display: flex;
+  flex-direction: column;
 }
 
 img {
-    width: 220px;
-    margin-bottom: 8px;
+  width: 220px;
+  margin-bottom: 8px;
 }
+
 footer {
-    margin-top: 40px;
-    height: 100vh;
-    border-top: 3px solid grey;
-    border-bottom: 1px solid black;
+  margin-top: 40px;
+  height: 100vh;
+  border-top: 3px solid grey;
+  border-bottom: 1px solid black;
 }
+
 .footer-header {
-    margin-top: 10px;
-    display: flex;
-    justify-content: space-between;
+  margin-top: 10px;
+  display: flex;
+  justify-content: space-between;
 }
+
 .footer-container {
-    display: flex;
-    /* border: 1px solid black; */
-    justify-content: space-around;
-    height: inherit;
+  display: flex;
+  justify-content: space-around;
+  height: inherit;
 }
+
 .footer-link {
-    /* border: 1px solid black; */
-    /* height: inherit; */
-    display: flex;
-    flex-basis: 200px;
-    justify-content: space-between;
-    flex-direction: column;
-    
+  display: flex;
+  flex-basis: 200px;
+  justify-content: space-between;
+  flex-direction: column;  
 }
+
 a {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
 }
+
 a:hover {
-    color: blue;
-    transition: all 1.4s ease-out;
+  color: blue;
+  transition: all 1.4s ease-out;
 }
+
 .footer-link a {
-    margin-bottom: 8px;
+  margin-bottom: 8px;
 }
 
 .footer-text {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 30px;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 30px;
 }
-.footer-text a {
 
-    color: grey;
-    font-size: 12px;
+.footer-text a {
+  color: grey;
+  font-size: 12px;
 }
+
 .border-top {
-    margin-top: 10px;
-    border-top: 0.5px solid lightgray ;
+  margin-top: 10px;
+  border-top: 0.5px solid lightgray;
 }
+
 .space {
-    padding: 0px;
-    margin: 0px;
-    position: relative;
+  position: relative;
 }
+
 .space h2 {
-    text-align: center;
-    font-style: italic;
-    font-weight: 900;
-    font-size: 2rem;
-    line-height: 3rem;
+  text-align: center;
+  font-style: italic;
+  font-weight: 900;
+  font-size: 2rem;
+  line-height: 3rem;
 }
